--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,36 +1,13 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-11-08T13:07:30.867Z'
+created: '2023-11-08T14:12:55.157Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
 publishStatus: Live
 steps:
   - content: >-
-      ## Intro to Arbitrum Nitro
-
-      ### What is Arbiturm Nitro
-
-      ### Innovative features in Nitro
-
-
-      ## Nitro vs Classic
-
-
-      ## Nitro Deisgn
-
-
-
-      ### Features that set Atbitum L2 ahead of other EVM L2's
-
-
-
-      ## Arbitrum Nitro Design
-
-
-
-
-      ## Arbitrum Nitro
+      ## What is Arbitrum Nitro?
 
 
       Arbitrum Nitro is a significant technical upgrade for Arbitrum, which is a
@@ -52,7 +29,7 @@ steps:
       Nitro, transactions on Arbitrum have become extremely efficient. 
 
 
-      ## Features of Arbitrum Nitro
+      ## Innovative Features of Arbitrum Nitro
 
 
       #### WebAssembly Code
@@ -72,9 +49,8 @@ steps:
       Developers can easily integrate Arbitrum Nitro without making any
       modifications because it supports the EVM. This means that existing
       Ethereum contracts and transactions can run on Arbitrum without any
-      changes. The goal of Arbitrum Nitro is to provide a trustless and scalable
-      solution for Ethereum, offering benefits such as trustless security,
-      compatibility with Ethereum, scalability, and minimum cost.
+      changes. This distinguishes Arbitrum Nitro from other layer 2 solutions as
+      each have their own VMs thereby requiring modifications for integration. 
 
 
       #### Deterministic Transactions
@@ -88,7 +64,7 @@ steps:
       the correctness of the chain state and outputs, supports
       Ethereum-compatible contracts and transactions, and manages the transfer
       and management of ETH and tokens on the chain. 
-    name: What is Arbitrum Nitro?
+    name: Introduction to Arbitrum Nitro
     stepItems: []
     uuid: 71f23120-3f81-446c-9d03-fe061903a797
   - content: ''
@@ -116,6 +92,106 @@ steps:
         uuid: 4f6183f2-289d-45f2-bebd-8f1661846cf5
         explanation: Explanation of the question
     uuid: 40dd8254-e6e1-4dd7-9e68-34f14bf45792
+  - content: >
+      ## Comparing Nitro and Classic
+
+      When comparing Nitro and Classic, it is important to understand their
+      similarities and differences. Both Nitro and Classic aim to create an
+      execution environment that closely resembles the Ethereum Virtual Machine
+      (EVM) as a second layer to Ethereum. However, they use different
+      approaches to achieve this.
+
+
+      ####  Different Virtual Machines
+
+
+      Classic uses the Arbitrum Virtual Machine (AVM), a custom-made virtual
+      machine, to establish the execution environment. On the other hand, Nitro
+      utilizes WebAssembly (Wasm) for low-level instructions. It compiles the Go
+      code to WASM and includes the widely used Ethereum implementation, Geth,
+      within the ArbOS program.
+
+
+      ####  Architectural Differences
+
+
+      The architecture of Nitro is its defining feature. It allows for direct
+      usage of Geth's EVM implementation, making it more efficient and
+      performant. In contrast, Classic relies on the AVM for low-level
+      instructions. This architectural difference leads to several benefits for
+      Nitro.
+
+
+      ####  Gas Fee and Ethereum Compatibility
+
+
+      One of the main benefits of Nitro is lower fees. By optimizing the
+      execution environment and leveraging native execution of Go code, Nitro
+      reduces the cost of transactions for end users. Additionally, Nitro offers
+      better Ethereum compatibility. It inherits the compatibility of Geth,
+      making it easier for clients to interact with the system.
+
+
+      ####  Simplicity of Codebase
+
+
+      Simplicity is another advantage of Nitro. By using Geth and incorporating
+      widely used compression libraries, Nitro simplifies the codebase and
+      reduces technical risks. This simplicity makes Nitro more accessible for
+      auditors and contributors, ensuring a higher level of implementation
+      security.
+
+
+
+
+      ----
+
+
+      **In Classic Arbitrum (old system):**
+
+      - You write code in Solidity or Vyper (these are programming languages
+      used for Ethereum).
+
+      - This code is converted into a special format (EVM bytecode) that
+      Ethereum can understand.
+
+      - ArbOS (the system managing Arbitrum transactions) changes this format
+      again into something the Arbitrum system can work with (AVM bytecode).
+
+      - This AVM bytecode does two jobs: it runs transactions and helps prove if
+      someone is cheating (fraud proofs).
+
+      - If there's a disagreement about a transaction, validators (who are like
+      referees) look at the AVM bytecode closely to figure out who's right.
+
+
+
+      **In Nitro Arbitrum (new system):**
+
+      - Similar to Classic, but it uses a more common language (Go) and a
+      universal format (WebAssembly, or Wasm) which many systems understand.
+
+      - Nitro creates checkpoints (think of them as save points in a game) that
+      summarize transactions into blocks, much like Ethereum.
+
+      - If there's a dispute, validators first agree on which block they're
+      arguing about before digging into the details with Wasm.
+
+      - This means that Nitro only does the heavy lifting of converting to Wasm
+      when there's a disagreement, which doesn't happen often.
+
+      - Normally, Nitro just runs transactions in the simplest way possible
+      without converting anything, which is quicker and cheaper.
+
+      - This makes Nitro more efficient because it doesn't prepare for problems
+      unless they actually happen, saving time and resources.
+    name: Nitro vs Classic
+    stepItems: []
+    uuid: 488abfeb-0e2c-472d-88cf-8fbc888963ee
+  - content: ''
+    name: Evaluation
+    stepItems: []
+    uuid: ca041520-b639-4eab-b2c7-37b09560b6ea
   - content: >
       ## The Key Nitro Design Ideas
 
@@ -239,177 +315,6 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: e49c619f-5960-4060-9b89-cdd09521cf36
-  - content: >-
-      ## Dispute Resolution
-
-
-      Interactive fraud proofs are a crucial aspect of optimistic rollups, which
-      are a type of blockchain design. When disputes arise between participants,
-      there are two main options to resolve them: interactive proving or
-      re-executing transactions. In the case of Arbitrum, interactive proving is
-      used because it is considered more efficient and flexible.
-
-
-      #### Interactive Fraud Proof
-       
-      The concept behind interactive proving is that the participants in the
-      dispute engage in a back-and-forth protocol. This protocol is overseen by
-      a contract on the main Ethereum chain (L1 contract) and aims to resolve
-      the dispute with minimal work required from the L1 contract. 
-
-
-      #### Process of Interactive Fraud Proof
-
-
-      To begin the process, if a party claims that the chain will produce a
-      certain result, they will post two claims of smaller size that combine to
-      yield their initial claim. The other party then chooses one of their
-      claims to challenge. This process continues, cutting the dispute in half
-      at each stage, until they are disagreeing about a single step of
-      execution. At this point, the L1 referee examines the instruction and
-      determines whether the first party's claim is correct.
-
-
-      ## Advantages of Interactive Fraud proof
-
-
-      #### Greater Efficiency
-
-
-      The key principle behind interactive proving is that both parties should
-      do as much work as possible off-chain to resolve their dispute. This
-      approach is more efficient than re-executing transactions because it
-      allows a rollup block to contain only a single claim about the end state
-      of the chain, rather than requiring a state claim for each transaction
-      within the block. This reduces the L1 footprint and overall cost.
-
-
-      #### Quicker Actions
-
-
-      Interactive proving also has advantages in the pessimistic case. The L1
-      referee only needs to check that both the parties' actions have the right
-      shape, rather than emulating the execution of an entire transaction. This
-      saves computational resources and time. Additionally, interactive proving
-      allows for a higher gas limit per transaction, which can be beneficial in
-      certain scenarios.
-
-
-      #### Higher Flexibility
-
-
-      Interactive proving offers more implementation flexibility compared to
-      reexecution approaches. It only requires the ability to verify a one-step
-      proof on Ethereum, whereas reexecution is limited by the capabilities of
-      the Ethereum Virtual Machine (EVM). The design of Arbitrum is heavily
-      influenced by the opportunities presented by interactive proving.
-    name: Dispute Resolution in Nitro
-    stepItems: []
-    uuid: 664a3e8e-12ae-44f4-a078-025b15e01c10
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: 0bf49cd7-6692-4004-9742-d436f3924da3
-  - content: >
-      ## Comparing Nitro and Classic
-
-      When comparing Nitro and Classic, it is important to understand their
-      similarities and differences. Both Nitro and Classic aim to create an
-      execution environment that closely resembles the Ethereum Virtual Machine
-      (EVM) as a second layer to Ethereum. However, they use different
-      approaches to achieve this.
-
-
-      ####  Different Virtual Machines
-
-
-      Classic uses the Arbitrum Virtual Machine (AVM), a custom-made virtual
-      machine, to establish the execution environment. On the other hand, Nitro
-      utilizes WebAssembly (Wasm) for low-level instructions. It compiles the Go
-      code to WASM and includes the widely used Ethereum implementation, Geth,
-      within the ArbOS program.
-
-
-      ####  Architectural Differences
-
-
-      The architecture of Nitro is its defining feature. It allows for direct
-      usage of Geth's EVM implementation, making it more efficient and
-      performant. In contrast, Classic relies on the AVM for low-level
-      instructions. This architectural difference leads to several benefits for
-      Nitro.
-
-
-      ####  Gas Fee and Ethereum Compatibility
-
-
-      One of the main benefits of Nitro is lower fees. By optimizing the
-      execution environment and leveraging native execution of Go code, Nitro
-      reduces the cost of transactions for end users. Additionally, Nitro offers
-      better Ethereum compatibility. It inherits the compatibility of Geth,
-      making it easier for clients to interact with the system.
-
-
-      ####  Simplicity of Codebase
-
-
-      Simplicity is another advantage of Nitro. By using Geth and incorporating
-      widely used compression libraries, Nitro simplifies the codebase and
-      reduces technical risks. This simplicity makes Nitro more accessible for
-      auditors and contributors, ensuring a higher level of implementation
-      security.
-
-
-
-
-      ----
-
-
-      **In Classic Arbitrum (old system):**
-
-      - You write code in Solidity or Vyper (these are programming languages
-      used for Ethereum).
-
-      - This code is converted into a special format (EVM bytecode) that
-      Ethereum can understand.
-
-      - ArbOS (the system managing Arbitrum transactions) changes this format
-      again into something the Arbitrum system can work with (AVM bytecode).
-
-      - This AVM bytecode does two jobs: it runs transactions and helps prove if
-      someone is cheating (fraud proofs).
-
-      - If there's a disagreement about a transaction, validators (who are like
-      referees) look at the AVM bytecode closely to figure out who's right.
-
-
-
-      **In Nitro Arbitrum (new system):**
-
-      - Similar to Classic, but it uses a more common language (Go) and a
-      universal format (WebAssembly, or Wasm) which many systems understand.
-
-      - Nitro creates checkpoints (think of them as save points in a game) that
-      summarize transactions into blocks, much like Ethereum.
-
-      - If there's a dispute, validators first agree on which block they're
-      arguing about before digging into the details with Wasm.
-
-      - This means that Nitro only does the heavy lifting of converting to Wasm
-      when there's a disagreement, which doesn't happen often.
-
-      - Normally, Nitro just runs transactions in the simplest way possible
-      without converting anything, which is quicker and cheaper.
-
-      - This makes Nitro more efficient because it doesn't prepare for problems
-      unless they actually happen, saving time and resources.
-    name: Nitro vs Classic
-    stepItems: []
-    uuid: 488abfeb-0e2c-472d-88cf-8fbc888963ee
-  - content: ''
-    name: Evaluation
-    stepItems: []
-    uuid: ca041520-b639-4eab-b2c7-37b09560b6ea
   - content: >+
       - https://docs.arbitrum.io/why-nitro
 
