--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-11-08T15:30:58.423Z'
+created: '2023-11-08T15:58:43.483Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
@@ -153,7 +153,7 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: ca041520-b639-4eab-b2c7-37b09560b6ea
-  - content: >+
+  - content: >-
       ## The Key Nitro Design Ideas
 
 
@@ -165,31 +165,20 @@ steps:
       #### Sequencing and Deterministic Execution
 
 
-      When a user initiates a transaction, it is signed using their wallet and
-      then dispatched to the Nitro chain's Sequencer. The Sequencer organizes
-      the incoming transactions sequentially and publishes this sequence.
-      Following this, transactions are systematically processed through a state
-      transition function, updating the state in relation to factors like
-      account balances and contract codes, occasionally emitting a new Layer 2
-      block on the Nitro chain. To maintain integrity, this function discards
-      any improperly formed transactions, ensuring the authenticity of the
-      sequence. This system's deterministic nature ensures that the outcome of a
-      transaction depends solely on its input state, preceding transactions in
-      the sequence, and the transaction itself. Therefore, any party with access
-      to this transaction sequence can independently compute the state
-      transition function and achieve consistent results, eliminating the need
-      for any consensus mechanism.
+      When a user sends a transaction on the Nitro chain, it is signed with
+      their wallet and given to the Sequencer. The Sequencer orders transactions
+      and publishes them, after which they're processed to update the Nitro
+      chain state, producing Layer 2 blocks as needed. Invalid transactions are
+      rejected to keep the sequence authentic. Since the process is
+      deterministic, anyone with the transaction sequence can verify the state
+      changes without a consensus mechanism.
 
 
-      The Sequencer manages the distribution of transaction sequences in two
-      ways: a real-time notification system and periodic batches on the L1
-      Ethereum chain. The real-time system alerts subscribers immediately about
-      each transaction. They can connect directly to the Sequencer or use a
-      relay. This offers "soft finality" based on the Sequencer's commitment to
-      order. For stronger finality, the Sequencer groups transactions,
-      compresses them with the "brotli" algorithm, and uploads them to the L1
-      Ethereum chain. When these transactions are finalized on Ethereum, they
-      also achieve "hard finality" on Layer 2 Nitro, solidifying their sequence.
+      The Sequencer uses a real-time alert system for immediate soft finality
+      and batches transactions on the Ethereum chain for hard finality. The
+      latter involves compressing transactions using "brotli" and posting them
+      to Ethereum, where their finalization ensures the sequence's immutability
+      on Nitro.
 
 
       <div align="center">
@@ -200,81 +189,71 @@ steps:
       #### Based on Go-Ethereum
 
 
-      "Geth," short for go-ethereum, represents the predominant node software
-      for Ethereum, developed predominantly in the Go programming language,
-      mirroring the core architecture of Nitro. The intricate structure of Nitro
-      can be visualized as a "geth-sandwich," comprised of three distinct
-      layers. The foundational base layer embodies the core facets of Geth,
-      emphasizing the emulation of EVM contracts and the management of
-      Ethereum's state structures. Nitro seamlessly integrates this code as a
-      library, applying minimal modifications to introduce essential
-      functionalities.
+      Nitro's architecture is centered around the concept of "geth at the core,"
+      which involves integrating go-ethereum (geth)—the predominant Ethereum
+      node software—into its foundation. Nitro is primarily developed in the Go
+      programming language, mirroring the language used for go-ethereum. The
+      structure of a Nitro node is envisioned in three distinct layers, often
+      referred to as a "geth-sandwich." The "geth-sandwich" terminology arises
+      because geth forms both the base and top layers of the structure,
+      sandwiching ArbOS in the middle.
 
 
-      The middle layer, termed ArbOS, is a custom-built segment designed to
-      extend features specific to Layer 2 functionality. These include parsing
-      and decompressing the Sequencer's data batches, managing Layer 1 gas
-      expenditures, orchestrating cross-chain bridge operations, and more.
-      Complementing this, the top layer largely derives from geth, tasked with
-      handling connections, addressing incoming RPC client requests, and
-      fulfilling other paramount operations essential for an Ethereum-compatible
-      blockchain node. This multi-layered approach, with Geth forming both the
-      top and bottom layers (akin to bread in a sandwich), has led to the
-      adoption of the "geth-sandwich" nomenclature.
+      The base layer includes the essential parts of geth that emulate the
+      execution of Ethereum Virtual Machine (EVM) contracts and manage
+      Ethereum's state structures. Nitro incorporates this as a library, with
+      minor tweaks to add necessary functionalities. The middle layer, called
+      ArbOS, is custom-built software that provides additional Layer 2
+      functionalities such as handling Sequencer data, managing gas costs on
+      Ethereum's Layer 1, and enabling cross-chain bridge operations for asset
+      transfers. The top layer is primarily derived from geth and deals with
+      network connections, client requests, and other functionalities required
+      to operate a blockchain node compatible with Ethereum. The State
+      Transition Function (STF) is a key component of this architecture,
+      encompassing the bottom geth layer and part of ArbOS, which processes
+      transactions and emits new block headers for the Nitro chain.
 
 
       #### Separate Execution and Proving
 
 
-      Designing a practical rollup system often encounters the challenge of
-      balancing efficient system performance with the ability to conclusively
-      verify execution outcomes. Nitro addresses this challenge by utilizing
-      identical source code for both execution and verification but targeting
-      different compilation outputs. For execution, Nitro's node software is
-      compiled using the standard Go compiler, producing native code tailored to
-      various deployment architectures. On the other hand, for verification
-      purposes, the segment of the code identified as the State Transition
-      Function (STF) is compiled into WebAssembly (wasm) using the Go compiler.
-      This wasm code subsequently undergoes transformation into a modified
-      format named WAVM, which is optimized for proof procedures.
+      Nitro tackles the rollup system's challenge of efficiency versus
+      verifiability by using the same codebase for both but compiling
+      differently. Execution compiles to native code via the Go compiler, while
+      verification compiles the State Transition Function (STF) into a
+      WebAssembly variant, WAVM, optimized for proofs.
 
 
-      Wasm, while effective for fraud proofs due to its features, needs
-      modifications for Nitro's objectives. Thus, Nitro presents WAVM which is a
-      refined wasm version. WAVM adjusts certain wasm characteristics,
-      introduces restrictions, and adds new opcodes for better blockchain
-      integration. Notably, the "ReadPreImage" instruction in WAVM fetches data
-      from a known hash's Merkle representation, enabling the STF to access and
-      alter the state tree using just its root hash. This approach, known as the
-      "hash oracle trick" and rooted in the original Arbitrum design, relies on
-      participants to store full data structures for content retrieval.
+      Nitro adapts WebAssembly (Wasm) into WAVM for its specific needs,
+      enhancing it for blockchain use. WAVM includes specialized instructions
+      like "ReadPreImage" to enable state tree modifications through Merkle
+      proofs, a technique derived from Arbitrum's "hash oracle trick," which
+      necessitates participants keeping complete data structures for access.
 
 
       #### Optimistic Rollup
 
 
-      Arbitrum operates as a rollup, wherein the inputs to the chain,
-      specifically the messages funneled into the inbox, are recorded on the
-      Ethereum chain as calldata. This ensures that all participants possess the
-      essential data to deduce the chain's current correct state. Since outcomes
-      are exclusively determined by the inbox history, one can reconstruct the
-      chain state using only public information. As a result, this transparent
-      structure empowers any individual to actively engage in the Arbitrum
-      protocol, whether by running an Arbitrum node or acting as a validator.
+      Arbitrum, an optimistic rollup, records transaction inputs on the Ethereum
+      blockchain, allowing anyone to reconstruct the state of its chain from
+      this data. It's "optimistic" because it assumes transactions are valid by
+      default; it publishes new blocks without immediate proof, relying on a
+      challenge period for verification. If no challenges arise within roughly a
+      week, the transaction is confirmed; if challenged, Arbitrum's dispute
+      resolution protocol determines the truth, penalizing false claims with
+      lost deposits.
 
 
-      The term 'optimistic' in Arbitrum's framework implies that the chain's
-      state progression is driven by a trust-but-verify mechanism. Essentially,
-      any party, termed a “validator”, can assert a rollup block's correctness
-      on Layer 1, leaving a window for others to dispute this assertion. If
-      unchallenged within the designated period (approximately a week), the
-      rollup block is affirmed as valid. However, should a contention arise,
-      Arbitrum employs a robust dispute resolution mechanism to discern the
-      truth. Misleading parties risk forfeiting deposits, which not only
-      discourages deceit but also rewards honest participants, thereby
-      bolstering the system's integrity. In most scenarios, the uncontested
-      submission of a correct rollup block is anticipated, minimizing disputes.
+      Disputes in Arbitrum are resolved using interactive fraud proofs, a method
+      that minimizes work for the Ethereum main chain (Layer 1). When a dispute
+      occurs, the parties engage in a protocol that incrementally narrows down
+      the contested claim until it's just about a single execution step, which
+      the Ethereum network then verifies. This interactive process offloads most
+      of the dispute resolution work off-chain, making it more efficient and
+      cost-effective compared to re-executing entire transactions on Ethereum.
 
+
+      TO DO: ADD PROPER DIAGRAMS
     name: 'Arbitrum Nitro Design '
     stepItems: []
     uuid: fc866114-3380-41da-a037-351a9246246a
