--- a/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
+++ b/src/guides/main/arbitrum-nitro-arbitrum-university-560.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: A deeper look into Arbitrum Nitro
-created: '2023-11-08T15:58:43.483Z'
+created: '2023-11-08T16:00:10.316Z'
 guideType: onboarding
 key: arbitrum-nitro-arbitrum-university-560
 name: 'Arbitrum Nitro '
@@ -189,29 +189,15 @@ steps:
       #### Based on Go-Ethereum
 
 
-      Nitro's architecture is centered around the concept of "geth at the core,"
-      which involves integrating go-ethereum (geth)—the predominant Ethereum
-      node software—into its foundation. Nitro is primarily developed in the Go
-      programming language, mirroring the language used for go-ethereum. The
-      structure of a Nitro node is envisioned in three distinct layers, often
-      referred to as a "geth-sandwich." The "geth-sandwich" terminology arises
-      because geth forms both the base and top layers of the structure,
-      sandwiching ArbOS in the middle.
-
-
-      The base layer includes the essential parts of geth that emulate the
-      execution of Ethereum Virtual Machine (EVM) contracts and manage
-      Ethereum's state structures. Nitro incorporates this as a library, with
-      minor tweaks to add necessary functionalities. The middle layer, called
-      ArbOS, is custom-built software that provides additional Layer 2
-      functionalities such as handling Sequencer data, managing gas costs on
-      Ethereum's Layer 1, and enabling cross-chain bridge operations for asset
-      transfers. The top layer is primarily derived from geth and deals with
-      network connections, client requests, and other functionalities required
-      to operate a blockchain node compatible with Ethereum. The State
-      Transition Function (STF) is a key component of this architecture,
-      encompassing the bottom geth layer and part of ArbOS, which processes
-      transactions and emits new block headers for the Nitro chain.
+      Nitro's design is anchored by "geth at the core," using go-ethereum, the
+      leading Ethereum node software, as the foundation and top layers of its
+      "geth-sandwich" architecture, with the custom ArbOS layer in between. The
+      base layer is the core of geth, modified slightly for Nitro's functions,
+      while ArbOS adds Layer 2 capabilities like Sequencer data processing and
+      cross-chain transactions. The top layer, also from geth, handles network
+      interactions and node operations. The State Transition Function (STF)
+      within this structure, including parts of geth and ArbOS, manages
+      transactions and generates new blocks on Nitro.
 
 
       #### Separate Execution and Proving
