--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-16T13:27:51.610Z'
+created: '2023-11-16T13:37:01.833Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
@@ -186,7 +186,7 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: 205472c5-46cf-40b6-a8dc-8c47aef16c3a
-  - content: >
+  - content: >-
       Follow along this step to understand how to submit the DAO proposals.
 
 
@@ -236,6 +236,56 @@ steps:
       With a successful temperature check, move on to the on-chain vote using
       Tally. Ensure all relevant feedback has been integrated into the final
       proposal.
+
+
+      ## Submit your on-chain proposal using Tally
+
+      Here are the steps to submit your on-chain proposal using Tally for the
+      Arbitrum DAO:
+
+
+      ### Step 1: Meet the Token Requirement
+
+      Ensure your wallet contains at least 1,000,000 $ARB tokens, which is
+      approximately 0.1% of votable tokens. Log into the Tally website with the
+      wallet that holds your $ARB tokens. Go to the "explore DAOs" section or
+      select "My DAOs" within your Tally profile. Locate and select the Arbitrum
+      DAO's page.
+
+
+      ### Step 2: Select the Governor
+
+      Click on the "Create new proposal" button. Decide which governor you are
+      addressing:
+           - **Arbitrum Core**: For Constitutional Proposals.
+           - **Arbitrum Treasury**: For non-Constitutional Proposals.
+
+      ### Step 3: Preview and Submit
+
+      Name your proposal and provide a detailed description. Add a preview image
+      if you wish (this is optional). Verify you are submitting to the correct
+      DAO page on Tally. Define the actions that will be executed if the
+      proposal is passed, such as transferring funds to a specific address.
+      Review your proposal thoroughly. You can save it as a draft or submit it
+      on-chain.
+
+
+      ### Step 4: Voting Conditions for Passage
+
+      A proposal is considered successful if it meets two conditions:
+           - It receives more votes in favor than against.
+           - It achieves a minimum favorable vote percentage of the total votable tokens:
+             - 5% for a Constitutional AIP.
+             - 3% for a non-Constitutional AIP.
+
+      ### Step 5: Stay Engaged and Seek Feedback
+
+      If your proposal passes, celebrate your success! The actions outlined in
+      your proposal will be executed on-chain after the specified delay. If your
+      proposal fails, but you believe it has potential after revision, gather
+      feedback and prepare to resubmit. As the DAO and its governance processes
+      are dynamic and evolving, stay active on the Arbitrum DAO governance forum
+      or Discord to discuss your proposal and receive input from the community.
     name: 'Submitting Proposals '
     stepItems: []
     uuid: a661e58d-8d66-4606-b545-3037c3675a9b
