--- a/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
+++ b/src/guides/main/submitting-a-dao-proposal-arbitrum-university-385.yaml
@@ -1,6 +1,6 @@
 categories: []
 content: Learn how to submit proposals in Arbitrum DAO
-created: '2023-11-16T13:37:01.833Z'
+created: '2023-11-16T13:48:26.388Z'
 guideType: onboarding
 key: submitting-a-dao-proposal-arbitrum-university-385
 name: Submitting a DAO proposal
@@ -238,6 +238,87 @@ steps:
       proposal.
 
 
+      @startuml
+
+      skinparam linetype polyline
+
+
+      title Steps to Submit a DAO Proposal
+
+
+      |Post on the DAO Governance Forum|
+
+      start
+
+      :Draft proposal;
+
+      :Post using template;
+
+      :Add context;
+
+
+      |Create a Snapshot Poll|
+
+      :Connect wallet to Snapshot;
+
+      :Access Arbitrum DAO space;
+
+      :Set up & link poll;
+
+
+      |Engage in Discussion|
+
+      :Share poll link on forum;
+
+      :Discuss and refine proposal;
+
+
+      |Review the Results|
+
+      :If poll fails, revise;
+
+      :If poll passes, prepare for on-chain vote;
+
+
+      |Proceed to On-chain Voting|
+
+      :Ensure wallet has required $ARB;
+
+      :Log into Tally;
+
+      :Select "Create new proposal";
+
+      :Choose governor;
+
+      :Fill in proposal details;
+
+      :Define actions;
+
+      :Save draft or submit;
+
+
+      |Voting Conditions for Passage|
+
+      :Confirm more favor than against;
+
+      :Ensure minimum vote percentage;
+
+
+      |Stay Engaged and Seek Feedback|
+
+      :Celebrate if proposal passes;
+
+      :Execute actions after delay;
+
+      :If fails, seek feedback for resubmission;
+
+
+      stop
+
+      @enduml
+
+
+
       ## Submit your on-chain proposal using Tally
 
       Here are the steps to submit your on-chain proposal using Tally for the
@@ -293,7 +374,33 @@ steps:
     name: Evaluation
     stepItems: []
     uuid: c821f543-03a5-40c5-8407-7a128dc2353f
-  - content: '## How to resubmit a DAO proposal?'
+  - content: >-
+      ## How to resubmit a DAO proposal?
+
+      Here's a guide to resubmitting a proposal to the Arbitrum DAO:
+
+
+      ### Step 1: Revise Proposal
+
+      Assess the community's feedback from your original proposal to understand
+      their concerns and objections. Update your proposal with the community's
+      input and any new information since the first submission.
+
+
+      ### Step 2: Resubmit as New
+
+      Approach the resubmission as if it's a new proposal, starting with a fresh
+      temperature check on the governance forum. In your resubmission, clearly
+      address the issues raised previously, following the proposal structure
+      guidelines.
+
+
+      ### Step 3: Reconsider if Rejected
+
+      If faced with multiple rejections, think about fundamentally revising the
+      proposal or conduct more extensive community engagement. Resubmitting a
+      proposal is about refining your idea in collaboration with the community
+      to enhance its likelihood of acceptance. 
     name: Re-Submitting the proposal
     stepItems: []
     uuid: de89e6dd-8634-4a00-b3a0-53be9f9f34dd
